# Minesweeper

./: CMakeLists.txt  main.cpp
Controller/: MainController.cpp  MainController.h
Model/: Map.cpp  Map.h  Scoreboard.cpp  Scoreboard.h  Tile.cpp  Tile.h
View/: View.cpp  View.h
